--- a/HRM.html
+++ b/HRM.html
@@ -30,14 +30,14 @@
                     <p>
                         以员工为中心
                         <br />建立完善的员工管理服务体系</p>
-                    <a class="primary tiyan_btn" style="background:rgba(246,249,254,1);" href="#">免费体验</a>
+                    <a class="primary tiyan_btn" style="background:rgba(246,249,254,1);" href="http://www.yunchuangbangong.com/experience.html">免费体验</a>
                 </div>
             </div>
         </div>
         <div class="carousel_bg" style="padding:40px 0 0 0;background: url('#');margin-top: 114px">
             <h2 class="primary">一站式人事管理服务平台</h2>
             <p>通过云创HRM助您管理人+事，发挥企业最核心资源-人力的最大价值，改善员工体验，提升人力资源管理效率。</p>
-            <a href="#" class="bg_primary tiyan_btn" style="color: #fff">免费体验</a>
+            <a href="http://www.yunchuangbangong.com/experience.html" class="bg_primary tiyan_btn" style="color: #fff">免费体验</a>
             <div class="swiper-container" style="margin-bottom: 74px">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide"><img src="images/OA/OA1.png" alt="" width="100%" height="100%"></div>
@@ -80,13 +80,12 @@
                             智能地解析、查找、过滤并共享简历，可
                             跟踪招聘进度，招聘更有效率。
                         </p>
-                        <a href="#" class="OA_content_btn">免费体验</a>
+                        <a href="http://www.yunchuangbangong.com/experience.html" class="OA_content_btn">免费体验</a>
                     </div>
                     <div class="opcity" id="rightout1" style="width: 432px;height:302px">
                         <img src="images/HRM/right1.png">
                     </div>
                 </div>
-
                 <div class="OA_card">
                     <div class="opcity" id="leftout2" style="width: 330px;height:387px">
                         <img src="images/HRM/right2.png">
@@ -96,12 +95,9 @@
                         <h2 class="OA_title">信息管理</h2>
                         <p class="OA_subtitle">用工风险透明化</p>
                         <p class="OA_content">
-
-                            员工关键信息在线管理，准确记录
-                            所有员工信息并实现有效管控。
-
+                            员工关键信息在线管理，准确记录所有员工信息并实现有效管控。
                         </p>
-                        <a href="#" class="OA_content_btn">免费体验</a>
+                        <a href="http://www.yunchuangbangong.com/experience.html" class="OA_content_btn">免费体验</a>
                     </div>
 
                 </div>
@@ -111,12 +107,9 @@
                         <h2 class="OA_title">智能薪酬</h2>
                         <p class="OA_subtitle">高效算薪更安全</p>
                         <p class="OA_content">
-
-                            支持多种格式的数据表导入，多维度
-                            数据智能分析，薪酬管理更安全。
-
+                            支持多种格式的数据表导入，多维度数据智能分析，薪酬管理更安全。
                         </p>
-                        <a href="#" class="OA_content_btn">免费体验</a>
+                        <a href="http://www.yunchuangbangong.com/experience.html" class="OA_content_btn">免费体验</a>
                     </div>
                     <div class="OA_card_right opcity" id="rightout3" style="width: 338px;height:384px">
                         <img src="images/HRM/right3.png">
@@ -131,28 +124,22 @@
                         <h2 class="OA_title">员工培训</h2>
                         <p class="OA_subtitle">能力提升有成效</p>
                         <p class="OA_content">
-
                             线上可完成调研、通知、组织、培训、考
                             核等全流程培训管理，省时又省力。
-
                         </p>
-                        <a href="#" class="OA_content_btn">免费体验</a>
+                        <a href="http://www.yunchuangbangong.com/experience.html" class="OA_content_btn">免费体验</a>
                     </div>
 
                 </div>
                 <div class="OA_card card_ml">
-
                     <div class="OA_card_left opcity" id="leftout5">
                         <img src="images/HRM/left5.png" width="130px" height="100px">
                         <h2 class="OA_title">绩效管理</h2>
                         <p class="OA_subtitle">考核方式更透明</p>
                         <p class="OA_content">
-
-                            为员工设定绩效目标，全面收集反馈
-                            并进行考核，提升绩效管理方式。
-
+                            为员工设定绩效目标，全面收集反馈并进行考核，提升绩效管理方式。
                         </p>
-                        <a href="#" class="OA_content_btn">免费体验</a>
+                        <a href="http://www.yunchuangbangong.com/experience.html" class="OA_content_btn">免费体验</a>
                     </div>
                     <div class="opcity" id="rightout5" style="width: 453px;height:345px">
                         <img src="images/HRM/right5.png">
