--- a/study.html
+++ b/study.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +21,6 @@
             width: 100%;
             height: 100%;
         }
-
         .swiper-slide {
             text-align: center;
             font-size: 18px;
@@ -43,9 +41,7 @@
             width: 337px;
             height: 581px;
         }
-
-        .swiper-slide-active,
-        .swiper-slide-duplicate-active {
+        .swiper-slide-active,.swiper-slide-duplicate-active {
             transform: scale(1);
         }
     </style>
@@ -60,15 +56,14 @@
                 <div class="content_title c_t_left" style="top:216px">
                     <h2>云创企业培训平台</h2>
                     <p>一个学习型企业的标配</p>
-                    <a class="primary tiyan_btn" style="background:rgba(246,249,254,1);" href="#">免费体验</a>
+                    <a class="primary tiyan_btn" style="background:rgba(246,249,254,1);" href="http://www.yunchuangbangong.com/experience.html">免费体验</a>
                 </div>
             </div>
         </div>
         <div class="carousel_bg" style="padding:0;padding-top:40px;position: relative; margin-top: 78px">
             <h2 class="primary">让每一家企业都有自己的商学院</h2>
             <p>丰富的课程资源，多元的学习入口，场景化得学习社区，全面加速企业人才培训和绩效转化，让企业都拥有专属商学院。</p>
-            <a href="#" class="bg_primary tiyan_btn" style="color: #fff">免费体验</a>
-
+            <a href="http://www.yunchuangbangong.com/experience.html" class="bg_primary tiyan_btn" style="color: #fff">免费体验</a>
             <div class="swiper-container-solution" style="margin-bottom: 64px">
                 <div class="selected-solution">
                     <div>
@@ -94,11 +89,9 @@
                     </div>
                 </div>
             </div>
-
             <h2 class="primary">一站式企业学习平台</h2>
             <p>实现全网在线学习与培训管理，满足企业个性化培训需求，有效沉淀企业知识，帮助企业构建一站式学习平台</p>
             <script>
-
                 var swiper = new Swiper('.swiper-container', {
                     slidesPerView: 3,
                     spaceBetween: 30,
@@ -113,8 +106,7 @@
             </script>
         </div>
         <div class="OA_detail_container" style="margin-top: 130px">
-            <div class="OA_detail"
-                style="background: url('./images/index/radius.png') no-repeat 100% 0;background-size: 70% 100%;margin-top: 200px;">
+            <div class="OA_detail" style="background: url('./images/index/radius.png') no-repeat 100% 0;background-size: 70% 100%;margin-top: 200px;">
                 <div class="OA_card card_ml">
                     <div class="OA_card_left opcity" id="leftout1">
                         <img src="images/study/left1.png" width="140px" height="110px">
@@ -123,13 +115,12 @@
                         <p class="OA_content">
                             汇集各行业近千门丰富课程，还有强 大的讲师资源，培训内容价值更高
                         </p>
-                        <a href="#" class="OA_content_btn">免费体验</a>
+                        <a href="http://www.yunchuangbangong.com/experience.html" class="OA_content_btn">免费体验</a>
                     </div>
                     <div class="opcity" id="rightout1" style="width: 453px;height:262px">
                         <img src="images/study/right1.png">
                     </div>
                 </div>
-
                 <div class="OA_card">
                     <div class="opcity" id="leftout2" style="width: 306px;height:323px">
                         <img src="images/study/right2.png">
@@ -141,7 +132,7 @@
                         <p class="OA_content">
                             直播实时互动，覆盖培训学习全场景，课程内容还可留存，直接生成微课
                         </p>
-                        <a href="#" class="OA_content_btn">免费体验</a>
+                        <a href="http://www.yunchuangbangong.com/experience.html" class="OA_content_btn">免费体验</a>
                     </div>
 
                 </div>
@@ -153,7 +144,7 @@
                         <p class="OA_content">
                             社交化的知识分享，沉淀员工潜在知识，加速优质知识在组织内的高效传播
                         </p>
-                        <a href="#" class="OA_content_btn">免费体验</a>
+                        <a href="http://www.yunchuangbangong.com/experience.html" class="OA_content_btn">免费体验</a>
                     </div>
                     <div class="OA_card_right opcity" id="rightout3" style="width: 464px;height:335px">
                         <img src="images/study/right3.png">
@@ -170,12 +161,11 @@
                         <p class="OA_content">
                             游戏式学习激励，让学习更有趣，设置学分排行榜，课程学习更有动力
                         </p>
-                        <a href="#" class="OA_content_btn">免费体验</a>
+                        <a href="http://www.yunchuangbangong.com/experience.html" class="OA_content_btn">免费体验</a>
                     </div>
 
                 </div>
                 <div class="OA_card card_ml">
-
                     <div class="OA_card_left opcity" id="leftout5">
                         <img src="images/study/left5.png" width="137px" height="92px">
                         <h2 class="OA_title">学习中心</h2>
@@ -183,7 +173,7 @@
                         <p class="OA_content">
                             设置学习记录、课程笔记，任务管理等功能，灵活管理学习进度，学习直观更有效
                         </p>
-                        <a href="#" class="OA_content_btn">免费体验</a>
+                        <a href="http://www.yunchuangbangong.com/experience.html" class="OA_content_btn">免费体验</a>
                     </div>
                     <div class="opcity" id="rightout5" style="width: 409px;height:281px">
                         <img src="images/study/right5.png">
@@ -194,5 +184,4 @@
         <div id="footer"></div>
     </div>
 </body>
-
 </html>
