--- a/CRM.html
+++ b/CRM.html
@@ -18,15 +18,10 @@
     <!-- <script src="js/swiper3.min.js"></script> -->
     <script src="js/global.js"></script>
     <style>
-        /* .swiper-container{
-            overflow-x: hidden;
-            height: 100% !important;
-        } */
         .swiper-container {
             width: 100%;
             height: 100%;
         }
-
         .swiper-slide {
             text-align: center;
             font-size: 18px;
@@ -47,9 +42,7 @@
             width: 337px;
             height: 581px;
         }
-
-        .swiper-slide-active,
-        .swiper-slide-duplicate-active {
+        .swiper-slide-active,.swiper-slide-duplicate-active {
             transform: scale(1);
         }
     </style>
@@ -67,7 +60,7 @@
                     <p>
                         以全新方式为企业赋能增效
                         <br /> 驱动企业业绩增长</p>
-                    <a class="primary tiyan_btn" style="background:rgba(246,249,254,1);" href="#">免费体验</a>
+                    <a class="primary tiyan_btn" style="background:rgba(246,249,254,1);" href="http://www.yunchuangbangong.com/experience.html">免费体验</a>
                 </div>
             </div>
         </div>
@@ -75,7 +68,7 @@
             <h2 class="primary">重构企业与客户的连接方式</h2>
             <p>云创CRM客户管理系统，覆盖客户销售、客户营销、客户服务的全生命周期管
                 理，智能管理业务流程，激发业绩持续增长。</p>
-            <a href="#" class="bg_primary tiyan_btn" style="color: #fff">免费体验</a>
+            <a href="http://www.yunchuangbangong.com/experience.html" class="bg_primary tiyan_btn" style="color: #fff">免费体验</a>
             <div class="swiper-container-solution" style="margin-bottom: 100px">
                 <div class="selected-solution">
                     <div>
@@ -131,7 +124,7 @@
                             客户360°全景画像，可集中管理客户
                             以及相关联系人，方便分析销售机会
                         </p>
-                        <a href="#" class="OA_content_btn">免费体验</a>
+                        <a href="http://www.yunchuangbangong.com/experience.html" class="OA_content_btn">免费体验</a>
                     </div>
                     <div class="opcity" id="leftout1" style="width: 463px;height: 308px;">
                         <img src="images/CRM/right1.png">
@@ -150,7 +143,7 @@
                             自动化追踪线索发展进度，寻找并审
                             查线索，全程可追溯，提升销售效率
                         </p>
-                        <a href="#" class="OA_content_btn">免费体验</a>
+                        <a href="http://www.yunchuangbangong.com/experience.html" class="OA_content_btn">免费体验</a>
                     </div>
 
                 </div>
@@ -161,7 +154,7 @@
                         <p class="OA_subtitle">有效跟踪推进快</p>
                         <p class="OA_content">自定义客户标签，有效追踪商机进展，
                             推进快速结单，实现销售精细化管理 </p>
-                            <a href="#" class="OA_content_btn">免费体验</a>
+                            <a href="http://www.yunchuangbangong.com/experience.html" class="OA_content_btn">免费体验</a>
                     </div>
                     <div class="OA_card_right opcity" id="leftout3" style="width:377px;height:380px">
                         <img src="images/CRM/right3.png">
@@ -178,7 +171,7 @@
                         <p class="OA_content">可设置工作流规则，快速响应来自
                             客户的服务
                             请求，流程自动化，更易把控销售节奏</p>
-                            <a href="#" class="OA_content_btn">免费体验</a>
+                            <a href="http://www.yunchuangbangong.com/experience.html" class="OA_content_btn">免费体验</a>
                     </div>
 
                 </div>
@@ -190,7 +183,7 @@
                         <p class="OA_content">可灵活创建管理订单，追溯历史
                             数据，确保产品交付和数据准确
                             推进快速结单 </p>
-                            <a href="#" class="OA_content_btn">免费体验</a>
+                            <a href="http://www.yunchuangbangong.com/experience.html" class="OA_content_btn">免费体验</a>
                     </div>
                     <div id="leftout5" class="opcity" style="width: 426px;height:304px">
                         <img src="images/CRM/right5.png">
