--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,10 +18,6 @@
     <!-- <script src="js/swiper3.min.js"></script> -->
     <script src="js/global.js"></script>
     <style>
-        /*.yuan_hover_box:hover+img {*/
-        /*    transform: scale(1.1);*/
-        /*    !* z-index: 9; *!*/
-        /*}*/
         .neiyuan img:hover {
             transform: scale(1.1);
         }
@@ -38,12 +33,10 @@
                 <div class="content_title_box">
                     <div class="content_title banner_weitiao">
                         <h2 style="font-size: 48px">智能企业工作平台</h2>
-                        <h2
-                            style="font-size: 32px;margin-top: 26px;margin-bottom: 41px;font-weight:300;color:rgba(241,241,241,1);">
-                            一个平台，让办公立马简单</h2>
+                        <h2 style="font-size: 32px;margin-top: 26px;margin-bottom: 41px;font-weight:300;color:rgba(241,241,241,1);">一个平台，让办公立马简单</h2>
                         <div class="header_input">
                             <input type="text" class="input_kw">
-                            <a href="" class="input_btn">免费体验<i class="input_jiantou"></i></a>
+                            <a href="http://www.yunchuangbangong.com/experience.html" class="input_btn">免费体验<i class="input_jiantou"></i></a>
                         </div>
                     </div>
                 </div>
@@ -55,7 +48,6 @@
                                 <i class="yuan_hover_icon1"></i>
                             </div>
                             <img src="images/index/y11.png">
-
                         </div>
                         <div id="yuan2">
                             <div class="yuan_hover_box">
@@ -63,7 +55,6 @@
                                 <i class="yuan_hover_icon2"></i>
                             </div>
                             <img src="images/index/y2.png">
-
                         </div>
                         <div id="yuan3">
                             <div class="yuan_hover_box">
@@ -71,7 +62,6 @@
                                 <i class="yuan_hover_icon3"></i>
                             </div>
                             <img src="images/index/y3.png">
-
                         </div>
                         <div id="yuan4">
                             <div class="yuan_hover_box">
@@ -79,7 +69,6 @@
                                 <i class="yuan_hover_icon4"></i>
                             </div>
                             <img src="images/index/y4.png">
-
                         </div>
                         <div id="yuan5">
                             <div class="yuan_hover_box">
@@ -183,13 +172,10 @@
             <div class="progress_yinying"></div>
         </div>
 
-
         <div class="zhanshi_waice">
             <div class="zhanshi_box">
                 <h2 class="index_title">智慧企业一体化办公平台</h2>
-                <p class="zhanshi_cont" style="margin-top: 20px;margin-bottom:103px">
-                    云创办公是集工作沟通、办公软件集成、数据分析等功能为一体的智能化办公软件服务系统平台</p>
-
+                <p class="zhanshi_cont" style="margin-top: 20px;margin-bottom:103px">云创办公是集工作沟通、办公软件集成、数据分析等功能为一体的智能化办公软件服务系统平台</p>
                 <div class="clearfix home-pingtai" style="padding: 0">
                     <div class="container">
                         <div class="nr">
@@ -562,7 +548,6 @@
                         <div>
                             <img src="images/index/fun_icon6.png" width="113px" height="94px">
                         </div>
-
                         <div>
                             <p class="fun_item_t" style="margin-top: 48px">高效安全多人群聊</p>
                             <p class="fun_item_c"> 组织内实名制聊天，高效传达，群聊信息不丢失</p>
@@ -630,15 +615,8 @@
                     <div class="industry_img">
                         <img src="./images/index/hangye0.png">
                         <div class="industry_content">
-                            <h2 class="i_t">
-                                大数据驱动智能营销
-                                从现在预见未来
-                            </h2>
-                            <p class="i_c">
-                                云创办公全渠道智能服务，将日常所有运营
-                                数据进行系统整理、记录、分析，以直观的形式
-                                展现给用户各种商业数据让数据价值清晰可见。
-                            </p>
+                            <h2 class="i_t">大数据驱动智能营销从现在预见未来</h2>
+                            <p class="i_c">云创办公全渠道智能服务，将日常所有运营数据进行系统整理、记录、分析，以直观的形式展现给用户各种商业数据让数据价值清晰可见。</p>
                             <a href="javascript:;" class="i_btn">了解更多</a>
                         </div>
                     </div>
